Some minor fixes for Dark mode

--- a/dashboard/src/components/AppView/AppControls/RollbackButton/RollbackDialog.scss
+++ b/dashboard/src/components/AppView/AppControls/RollbackButton/RollbackDialog.scss
@@ -6,6 +6,3 @@
     color: var(--cds-global-typography-color-400, #333);
   }
 }
-cds-button {
-  margin-top: 1em;
-}
